<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sortRg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:checkedButton="@id/sort_desc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/select_sort"
        android:textColor="@color/colorBlack" />

    <RadioButton
        android:id="@+id/sort_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/default_selector_rb_check"
        android:text="@string/sort_desc" />

    <RadioButton
        android:id="@+id/sort_asc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/default_selector_rb_check"
        android:text="@string/sort_asc" />

</RadioGroup>