<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/finderRg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:checkedButton="@id/finder_window">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/select_finder"
        android:textColor="@color/colorBlack" />

    <RadioButton
        android:id="@+id/finder_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/default_selector_rb_check"
        android:text="@string/finder_window" />

    <RadioButton
        android:id="@+id/finder_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/default_selector_rb_check"
        android:text="@string/finder_bottom" />

</RadioGroup>